[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Custom_Fonts/cardLabel.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/MainManuUi/DeckMenu/CardViewer/CardEditor/CardEditorTypePanel.gd" type="Script" id=2]

[node name="CardEditorTypePanel" type="Panel"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_right = 154.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 1 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCardButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 500.0
margin_right = 840.0
margin_bottom = 900.0
custom_fonts/font = ExtResource( 1 )
text = "New Card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExistingCardButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 1200.0
margin_right = 840.0
margin_bottom = 1600.0
custom_fonts/font = ExtResource( 1 )
text = "Existing Card"
[connection signal="pressed" from="BackButton" to="." method="on_back_button_click"]
[connection signal="pressed" from="NewCardButton" to="." method="on_new_card_button_click"]
[connection signal="pressed" from="ExistingCardButton" to="." method="on_existing_card_button_click"]
